# SwarmalatorsV2

./: .gitignore  README.md  center_of_mass.py  overlay_waypoints.py  pyproject.toml  requirements.txt  test.py
swarmalators/: __init__.py  camera_test.py  experiments.py  laser.py  main.py  swarmalator.py  swarmalator_loop.py  waypoints.py
swarmalators/nRFSwarmalator/: nRFSwarmalator.py
swarmalators/tracker/: _video_stream.py  direction.py  direction_camera.json  euclid_tracker.py  tracker.py  tracker_camera.json
tests/: camera_test.py  direction_camera.json  swarmalator_test.py  tracker_camera.json
